v1.0.0-1.21: Added support for 1.21